--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.appcompat.widget.LinearLayoutCompat
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         tools:context=".MainActivity">
 
-    <TextView
-            android:layout_width="wrap_content"
+    <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnHeritage"
             android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            android:layout_width="match_parent"
+            android:text="Heritage"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnEncapsulation"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:text="Encapsulation"/>
+
+    <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnAbstract"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:text="Abstract"/>
+
+    <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnInterface"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:text="Interface"/>
+
+
+</androidx.appcompat.widget.LinearLayoutCompat>
