--- a/app/src/main/res/layout/activity_abstract.xml
+++ b/app/src/main/res/layout/activity_abstract.xml
@@ -2,10 +2,9 @@
 <androidx.appcompat.widget.LinearLayoutCompat
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".sampleInheritance.InheritanceActivity">
+        tools:context=".sampleAbstract.AbstractActivity">
 
     <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvShow"
