--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,6 @@
 <androidx.appcompat.widget.LinearLayoutCompat
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -21,10 +20,10 @@
             android:text="Encapsulation"/>
 
     <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btnPolimorfismo"
+            android:id="@+id/btnPolymorphism"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
-            android:text="Polimorfismo"/>
+            android:text="Polymorphism"/>
 
     <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnAbstract"
